// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wishSlice should add a new item to the state 1`] = `
Object {
  "wishItems": Array [
    Object {
      "count": 1,
      "id": 1,
      "imageUrl": "image",
      "name": "added",
      "price": 100,
      "size": "L",
    },
  ],
}
`;

exports[`wishSlice should add count to the item 1`] = `
Object {
  "wishItems": Array [
    Object {
      "count": 2,
      "id": 1,
      "imageUrl": "image",
      "name": "added",
      "price": 100,
      "size": "L",
    },
  ],
}
`;

exports[`wishSlice should minus count of the item 1`] = `
Object {
  "wishItems": Array [
    Object {
      "count": 1,
      "id": 1,
      "imageUrl": "image",
      "name": "added",
      "price": 100,
      "size": "L",
    },
  ],
}
`;

exports[`wishSlice should remove the item from the state 1`] = `
Object {
  "wishItems": Array [],
}
`;

exports[`wishSlice should return default state 1`] = `
Object {
  "wishItems": Array [],
}
`;
